# os2apwrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/os2apwrapper/: __about__.py  __init__.py  main.py  os2apwrapper.py
src/os2autoprocess/: __init__.py
