[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "os2apwrapper"
authors = [
  { name = "Nicki Kielsen", email = "Nicki.kielsen@brk.dk" },
]
description = "Module for updating the phase/status of a process, using the os2autoprocess API"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "python-dotenv",
    "typing",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/BorholmsRegionsKommuneIT/os2apwrapper"
Issues = "https://github.com/BorholmsRegionsKommuneIT/os2apwrapper/issues"

[tool.ruff]
target-version = "py37"
line-length = 140