[metadata]
name = os2apwrapper
description = Modul for updating phase/status by process id in os2autoprocess
long_description_content_type = text/markdown
url = https://github.com/BorholmsRegionsKommuneIT/os2apwrapper
project_urls =
    Bug Tracker = https://github.com/BorholmsRegionsKommuneIT/os2apwrapper/issues
    Changelog = https://github.com/BorholmsRegionsKommuneIT/os2apwrapper/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    os2apwrapper = os2apwrapper.app:entry_point